@@ -4,8 +4,8 @@ public class WrappersAndPrimitives {
 
     public static void main(final String[] args) {
 
-        final Integer intObj1 = new Integer(47);
-        final Integer intObj2 = new Integer(47);
+        final Integer intObj1 = Integer.valueOf(47);
+        final Integer intObj2 = Integer.valueOf(47);
 
         System.out.println(intObj1 == intObj2);
         System.out.println(intObj1.equals(intObj2));
